--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "15.0.6",
     "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
